correccion vendor y pages

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     />
     <meta name="author" content="Natalia Corona" />
     <meta name="keywords" content="cafetería, café, postres," />
-    <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <link rel="icon" href="favicon.ico" />
     <title>Cafetería</title>
   </head>
