--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>
               <a class="nav__link" href="#reservation">Reservar una mesa</a>
             </li>
-            <li><a class="nav__link" href="#contacts">Contactos</a></li>
+            <li><a class="nav__link" href="#footer">Contactos</a></li>
           </ul>
         </nav>
 
@@ -79,32 +79,33 @@
           </p>
           <div class="recipes__videos">
             <div class="recipes__video-item">
-              <iframe
-                class="recipes__iframe"
-                src="https://www.youtube.com/embed/j6VlT_jUVPc"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              ></iframe>
-              <div class="recipes__video-caption">
-                <p>Receta en Aeropress</p>
-                <p>~5 min</p>
+              <div>
+                <iframe
+                  class="recipes__iframe"
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__video-caption">
+                  <p>Receta en Aeropress</p>
+                  <p>~5 min</p>
+                </div>
               </div>
-            </div>
-
-            <div class="recipes__video-item">
-              <iframe
-                class="recipes__iframe"
-                src="https://www.youtube.com/embed/st571DYYTR8"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              ></iframe>
-              <div class="recipes__video-caption">
-                <p>Receta en cafetera francesa</p>
-                <p>~15 min</p>
+              <div>
+                <iframe
+                  class="recipes__iframe"
+                  src="https://www.youtube.com/embed/st571DYYTR8"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__video-caption">
+                  <p>Receta en cafetera francesa</p>
+                  <p>~15 min</p>
+                </div>
               </div>
             </div>
           </div>
